Set minimum width and fix content overflow setting to enable scrolling weekview

--- a/next/src/app/dashboard/dashboard.module.scss
+++ b/next/src/app/dashboard/dashboard.module.scss
@@ -117,6 +117,8 @@ p.alt {
   width: 100%;
   height: 100%;
 
+  overflow-x: auto;
+
   padding: 10px;
 
   display: flex;
@@ -124,11 +126,12 @@ p.alt {
 }
 .weekdays {
   width: 100%;
+  min-width: 800px;
+  
   height: 35px;
   display: flex;
   justify-content: space-around;
   text-align: center;
-
 
   flex: 0 0 35px;
 
@@ -146,6 +149,8 @@ p.alt {
   height: 100%;
   width: 100%;
   margin-top: 7px;
+
+  min-width: 800px;
 
   overflow: hidden;
 }
