--- a/next/src/app/home.css
+++ b/next/src/app/home.css
@@ -68,6 +68,8 @@
 .Content {
   width: 100%;
   height: 100%;
+
+  overflow: hidden;
 }
 
 /* Title and avatar w/notifications */
